--- a/assets/css/main/receitas/receita.css
+++ b/assets/css/main/receitas/receita.css
@@ -2,7 +2,5 @@
     background-color: #fdfdfd;
     display: flex;
     flex-direction: column;
-    margin-bottom: 5rem;
-    margin-right: 5rem;
-    width: calc(25% - 5rem);
+    width: 250px;
 }
